--- a/scriptie/bachproef/bachproef-tin.bib
+++ b/scriptie/bachproef/bachproef-tin.bib
@@ -128,10 +128,16 @@
   url    = {https://github.com/SebastienDePauw/BachelorProef-2020-2021},
 }
 
-@WWW{Flutter,
+@Online{Flutter,
   author = {Flutter},
-  title  = {Flutter website},
-  url    = {https://flutter.dev},
+  title  = {Flutter documentatie},
+  url    = {https://flutter.dev/docs},
+}
+
+@Online{Google,
+  author = {Google},
+  title  = {Android documentatie},
+  url    = {https://developer.android.com},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
