--- a/scriptie/bachproef/bachproef-tin.tex
+++ b/scriptie/bachproef/bachproef-tin.tex
@@ -74,7 +74,7 @@
 %
 %  \caption[korte beschrijving]{uitgebreide beschrijving}
 %
-% De korte beschrijving wordt gebruikt voor deze lijst, de uitgebreide staat bij
+% De korte beschrijving wordt gebruikt voor deze lijst, de uitgebreide staat bij\dfrac{num}{den}
 % de figuur of tabel zelf.
 
 \listoffigures
