--- a/scriptie/bachproef/conclusie.tex
+++ b/scriptie/bachproef/conclusie.tex
@@ -14,21 +14,12 @@
 % Heeft het onderzoek geleid tot nieuwe vragen die uitnodigen tot verder 
 %onderzoek?
 
-% Trek een duidelijke conclusie, in de vorm van een antwoord op de onderzoeksvra(a)g(en). Wat was jouw bijdrage aan het onderzoeksdomein en hoe biedt dit meerwaarde aan het vakgebied/doelgroep?
-Voor elk van voorgaande onderzoekscriteria kan gezegd worden dat Flutter een goed, als niet beter alternatief biedt voor native Android.
+Voor elk van voorgaande onderzoekscriteria kan gezegd worden dat Flutter een goed, als niet beter alternatief biedt op native Android. Het lijkt de betere optie te zijn voor kleinschalige apps, minder boilerplate code en een minder steile leercurve. Het grootste voordeel dat Flutter biedt tegenover Android is de enkele codebase die kan gecompileerd worden naar Android- maar ook iOS- en web applicaties. Dit kunnen de meeste cross-platform systemen en is dus niet eigen aan Flutter. Een ander Flutter specifiek voordeel is de hot reload functionaliteit die de ontwikkelcyclus zoveel sneller maakt. Nog een voordeel van Flutter is de overzichtelijke documentatie en een groepering van alle verschillende packages op één site. Al kan het moeilijk zijn om specifieke goed ondersteunde packages te vinden. Een aantal nadelen van Flutter zijn het verloren gaan van de native look en feel. Maar ook de nieuwe iOS en Android features die pas later worden toegevoegd.
 
+Het is moeilijk te bepalen of Flutter al matuur genoeg is om te gebruiken in de professionele sector. Het is belangrijk om rekening te houden met de omvang van de applicaties. De apps ontwikkeld voor dit onderzoek bevatten geen complexe features. De resultaten en conclusies van dit onderzoek slaan dus alleen op kleine Flutter apps. Grootschalige applicaties met complexe features zouden een andere kijk op het systeem kunnen geven. Het maken van een complexe applicatie viel buiten de scope van het onderzoek.  Wel kan gezegd worden dat voor kleinschalige applicaties met simpele features Flutter een goed alternatief biedt op Android. De snelle vooruitgang, de grote gebruikersbasis en de vele updates binnen het platform geven ook teken van een positieve toekomst. 
 
-Al is het moeilijk om te laten uit blijken of Flutter al een volwaardige tegenstander is voor Android. Indien een grotere app ontwikkeld wordt met complexe features kan dit pas bekeken worden.
+Flutter was zeer toegankelijk voor nieuwe developers. Voor moeilijke concepten zoals asynchrone taken voorziet flutter simpele oplossingen die gemakkelijk aan te leren zijn. Indien iets niet duidelijk is kan ook altijd terug gevallen worden op de uitgebreide documentatie. De diepe nesting van Widgets kan in het begin ingewikkeld lijken maar is een concept dat snel duidelijk wordt. Het kan voor nieuwe ontwikkelaars soms beangstigend zijn om via de terminal te werken. Kleine simpele Flutter apps kunnen geschreven worden zonder kennis van Android of iOS, wat veel tijd uitspaart. Echter vergt Flutter wel kennis over onderliggende frameworks wanneer men complexere Flutter apps begint te ontwikkelen. Daarom is het niet aangeraden om zonder voorkennis in applicatieontwikkeling, Flutter apps te ontwikkelen.
 
-Voor simpele applicaties met weinig complexe features lijkt het daarom wel de beste optie. Echter wanneer een ontwikkelaar wilt groeien en bijleren zal hij al snel stoten op de werkelijkheid van het framework. De kennis over native Android en iOS hoeft echter niet uitgebreid te zijn. Maar Flutter vergt wel kennis over onderliggende Frameworks wanneer men uitgebreidere Flutter apps begint te ontwikkelen 
+Ook zijn bepaalde delen van het onderzoek open voor discussie. Zowel de resultaten van CPU gebruik als die van opstartsnelheid worden in vraag gesteld. Zo werden niet alle omgevingsvariabelen weg gehaald voor en tijdens het onderzoek. Deze conclusie ligt in lijn met de hypotheses op de onderzoeksvragen. De literatuurstudie gaf duidelijk inzicht in het Flutter framework, hieruit kon een objectief beeld gevormd worden over de werking en de voor- en nadelen van de Flutter stack. 
 
-Flutter biedt een goed alternatief op native Android ontwikkeling.
-
-
-
-
-% Reflecteer kritisch over het resultaat. Had je deze uitkomst verwacht? Zijn er zaken die nog niet duidelijk zijn?
-Daarbuiten is het ook belangrijk om rekening te houden met de omvang van de applicaties. Beide apps zijn klein en bevatten geen ingewikkelde features. Indien een grotere Flutter app ontwikkeld wordt De resultaten en conclusie van dit onderzoek slaan dus alleen op kleine Flutter apps. Ook zijn bepaalde delen van het onderzoek open voor discussie. Zowel de resultaten van CPU gebruik als die van opstartsnelheid worden in vraag gesteld. Zo werden niet alle omgevingsvariabelen weg gehaald voor en tijdens het onderzoek. Deze conclusie ligt in lijn met de hypotheses op de onderzoeksvragen. De literatuurstudie gaf duidelijk inzicht in het Flutter framework, hieruit kon een objectief beeld gevormd worden over de werking en de voor- en nadelen van de Flutter stack. 
-
-% Heeft het onderzoek geleid tot nieuwe vragen die uitnodigen tot verder
 Dit onderzoek spitste zich toe op het vergelijken van native Android apps met Flutter apps, echter viel een vergelijking met iOS buiten deze scope. In verder onderzoek zou deze vergelijking kunnen gemaakt worden. Hieruit kan dan een volwaardig beeld worden geschetst van de huidige stand van het Flutter framework tegenover native ontwikkeling. Daarnaast kan verder onderzoek gedaan worden naar Flutter app performantie. Deze metric zal normaal blijven verbeteren naarmate het platform groeit. Om dit te kunnen toetsen is toekomstig onderzoek een must. Door deze performantie resultaten te vergelijken over de jaren heen kan gekeken worden naar de groei van Flutter. Als laatste kan de schaalbaarheid van Flutter apps een interessant onderzoeksdomein vormen voor de bedrijfswereld. Professionele apps bevatten meestal veel complexe features die Android op een goede manier integreert. Indien Flutter meer tractie wenst te krijgen moet het een uitwerking of alternatief kunnen bieden voor elke van deze features.
