--- a/scriptie/bachproef/uitvoeringsbestanden.tex
+++ b/scriptie/bachproef/uitvoeringsbestanden.tex
@@ -10,7 +10,7 @@ Een uitvoeringsbestand, ook wel gekend als een executable, van een Android app k
 Tabel \ref{table:maatstafUitvoeringsbestand} biedt inzicht in de gebruikte maatstaf voor dit deel van het onderzoek.
 \begin{table}
     \begin{center}
-        \caption{De gebruikte maatstaf voor de grootte van de uitvoeringsbestanden}
+        \caption{Gebruikte maatstaf voor de grootte van de uitvoeringsbestanden}
         \label{table:maatstafUitvoeringsbestand}
         \begin{tabular}{ |l|c|c| }
             \hline
