--- a/scriptie/bachproef/bachproef-tin.tex
+++ b/scriptie/bachproef/bachproef-tin.tex
@@ -14,7 +14,8 @@
 %%---------- Documenteigenschappen ---------------------------------------------
 
 % De titel van het rapport/bachelorproef
-\title{Cross-platform Flutter ontwikkeling tegenover native Android ontwikkeling: een vergelijkende studie}
+\title{\IfLanguageName{dutch}{Cross-platform Flutter ontwikkeling tegenover native Android ontwikkeling: een vergelijkende studie}{Cross-platform Flutter development versus native Android development: a comparative study}}
+
 
 % Je eigen naam
 \author{Sébastien De Pauw}
