--- a/scriptie/bachproef/bachproef-tin.tex
+++ b/scriptie/bachproef/bachproef-tin.tex
@@ -94,7 +94,7 @@
 \input{asynchroon}
 \input{apis}
 \input{security}
-\input{complexiteit}
+\input{toegankelijkheid}
 \input{tooling} 
 \input{appendix}
 \input{conclusie}
