--- a/scriptie/bachproef/inleiding.tex
+++ b/scriptie/bachproef/inleiding.tex
@@ -58,7 +58,6 @@ Het beoogde resultaat van de studie biedt een antwoord op alle onderzoeksvragen.
 \newpage
 \section{\IfLanguageName{dutch}{Opzet van deze bachelorproef}{Structure of this bachelor thesis}}
 \label{sec:opzet-bachelorproef}
-%TODO afwerken
 Deze scriptie kan opgedeeld worden in verschillende hoofdstukken, elk hoofdstuk kan bestaan uit verschillende secties of ondertitels. Deze sectie beschrijft de inhoud van elk van deze hoofdstukken.
 
 Hoofdstuk~\ref{ch:inleiding}: Inleiding: schetst een kort beeld van de inhoud van deze studie. Biedt een antwoord op sommige vragen rond deze paper.
@@ -75,7 +74,7 @@ Hoofdstuk~\ref{ch:api} Gebruik van online API’s: bekijkt de werking van http v
 
 Hoofdstuk~\ref{ch:security} App veiligheid: omvat een lijst van best-practices met daarbij kort uitgelegd hoe ze geïmplementeerd dienen te worden in beide platformen.
 
-Hoofdstuk~\ref{ch:complexiteit} Code complexiteit: kijkt naar de code complexiteit van beide platformen aan de hand van de geschreven applicaties.
+Hoofdstuk~\ref{ch:toegankelijkheid} Toegankelijkheid van de frameworks: kijkt naar onder andere lijnen code, code complexiteit en ontwikkelingstijd van beide platformen.
 
 Hoofdstuk~\ref{ch:tooling} Tooling: omvat een lijst van meest gebruikte command line tools voor elk platform en vergelijkt de tooling opties.
 
